Feat. Action Secret

--- a/templates/game/show_game.html.twig
+++ b/templates/game/show_game.html.twig
@@ -6,7 +6,10 @@
         <div class="col-8">
             Cartes de l'adversaire
             {% for card in set.user2HandCards %}
-                <img src="{{ asset('cartes/'~cards[card].picture) }}">{{ cards[card].number }}
+                {# <img src="{{ asset('cartes/'~cards[card].picture) }}"> #}
+                <span style="border: 1px solid black; margin:3px; padding:5px">
+                {{ cards[card].number }}
+            </span>
             {% endfor %}
         </div>
         <div class="col-4">
@@ -17,7 +20,14 @@
         Plateau adversaire
     </div>
     <div class="row">
-        Plateau
+        {% for i in 1..7 %}
+            <div class="col-1">
+                <span style="border: 1px solid black; margin:3px; padding:5px">
+                    {{ i }}
+                </span>
+            </div>
+        {% endfor %}
+
     </div>
     <div class="row">
         Mon Plateau
@@ -25,11 +35,22 @@
     <div class="row">
         <div class="col-8">
             {% for card in set.user1HandCards %}
-                <img src="{{ asset('cartes/'~cards[card].picture) }}">{{ cards[card].number }}
+                {# <img src="{{ asset('cartes/'~cards[card].picture) }}"> #}
+                <span style="border: 1px solid black; margin:3px; padding:5px">
+                {{ cards[card].number }}
+                    <input type="radio" name="carte_secret" value="{{ card }}"
+                           style="display: none"
+                           class="choixSecret">
+                </span>
             {% endfor %}
         </div>
         <div class="col-4">
             Mes Actions
+            <button id="secret">Secret</button>
+            <button  id="depot">Depot</button>
+            <button  id="offre">Offre</button>
+            <button  id="echange">Echange</button><br>
+            <button id="valider" style="display: none">Valider action</button>
         </div>
     </div>
 
@@ -41,3 +62,46 @@
 
 {% endblock %}
 
+{% block javascripts %}
+<script>
+  let action
+    $(document).on('click', '#secret', function(){
+      console.log('secret')
+      action = 'secret' //mémorise l'action en cours
+      $('.choixSecret').show()
+      $('#valider').show()
+    })
+
+    $(document).on('click', '#valider', function(){
+      switch (action) {
+        case 'secret':
+            donneesAction = {
+              action: 'secret',
+              carte: $('input[name="carte_secret"]:checked').val()
+            }
+          break;
+        case 'depot':
+
+          break;
+        case 'offre':
+
+          break;
+        case 'echange':
+
+          break;
+      }
+
+      $.ajax({
+        url: "{{ path('action_game', {game: game.id}) }}",
+        data: donneesAction,
+        method: 'POST',
+        success: function() {
+
+        },
+        error: function(){
+
+        }
+      })
+    })
+</script>
+{% endblock %}
