--- a/templates/game/show_game.html.twig
+++ b/templates/game/show_game.html.twig
@@ -1,59 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-    <div class="row">
-        <div class="col-8">
-            Cartes de l'adversaire
-            {% for card in set.user2HandCards %}
-                {# <img src="{{ asset('cartes/'~cards[card].picture) }}"> #}
-                <span style="border: 1px solid black; margin:3px; padding:5px">
-                {{ cards[card].number }}
-            </span>
-            {% endfor %}
-        </div>
-        <div class="col-4">
-            Actions
-        </div>
-    </div>
-    <div class="row">
-        Plateau adversaire
-    </div>
-    <div class="row">
-        {% for i in 1..7 %}
-            <div class="col-1">
-                <span style="border: 1px solid black; margin:3px; padding:5px">
-                    {{ i }}
-                </span>
-            </div>
-        {% endfor %}
-
-    </div>
-    <div class="row">
-        Mon Plateau
-    </div>
-    <div class="row">
-        <div class="col-8">
-            {% for card in set.user1HandCards %}
-                {# <img src="{{ asset('cartes/'~cards[card].picture) }}"> #}
-                <span style="border: 1px solid black; margin:3px; padding:5px">
-                {{ cards[card].number }}
-                    <input type="radio" name="carte_secret" value="{{ card }}"
-                           style="display: none"
-                           class="choixSecret">
-                </span>
-            {% endfor %}
-        </div>
-        <div class="col-4">
-            Mes Actions
-            <button id="secret">Secret</button>
-            <button  id="depot">Depot</button>
-            <button  id="offre">Offre</button>
-            <button  id="echange">Echange</button><br>
-            <button id="valider" style="display: none">Valider action</button>
-        </div>
-    </div>
-
+<div id="plateau">
+{{ include('game/plateau_game.html.twig') }}
+</div>
 
 
 {% endblock %}
@@ -95,8 +45,10 @@
         url: "{{ path('action_game', {game: game.id}) }}",
         data: donneesAction,
         method: 'POST',
-        success: function() {
-
+        success: function(data) {
+            if (data == true) {
+              $('#plateau').load("{{ path('refresh_plateau_game', {game:game.id}) }}")
+            }
         },
         error: function(){
 
